archive/pi_220304/.xsession-errors
Xsession: X session started for pi at Thu 03 Mar 2022 06:07:20 PM EST
dbus-update-activation-environment: setting DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
dbus-update-activation-environment: setting DISPLAY=:0
dbus-update-activation-environment: setting XAUTHORITY=/home/pi/.Xauthority
/home/pi/.Xresources:4:2: error: invalid preprocessing directive #xvkbd
 #xvkbd.windowGeometry: 800x400
  ^~~~~
localuser:pi being added to access control list
dbus-update-activation-environment: setting GTK_MODULES=gail:atk-bridge
dbus-update-activation-environment: setting QT_ACCESSIBILITY=1
dbus-update-activation-environment: setting USER=pi
dbus-update-activation-environment: setting LANGUAGE=en_US.UTF-8
dbus-update-activation-environment: setting XDG_SESSION_TYPE=x11
dbus-update-activation-environment: setting HOME=/home/pi
dbus-update-activation-environment: setting DESKTOP_SESSION=fluxbox
dbus-update-activation-environment: setting XDG_SEAT_PATH=/org/freedesktop/DisplayManager/Seat0
dbus-update-activation-environment: setting GTK_MODULES=gail:atk-bridge
dbus-update-activation-environment: setting DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
dbus-update-activation-environment: setting LOGNAME=pi
dbus-update-activation-environment: setting XDG_SESSION_CLASS=user
dbus-update-activation-environment: setting PATH=/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games
dbus-update-activation-environment: setting GDM_LANG=en_US.utf8
dbus-update-activation-environment: setting XDG_SESSION_PATH=/org/freedesktop/DisplayManager/Session0
dbus-update-activation-environment: setting XDG_RUNTIME_DIR=/run/user/1000
dbus-update-activation-environment: setting DISPLAY=:0
dbus-update-activation-environment: setting LANG=en_US.UTF-8
dbus-update-activation-environment: setting XDG_SESSION_DESKTOP=fluxbox
dbus-update-activation-environment: setting XAUTHORITY=/home/pi/.Xauthority
dbus-update-activation-environment: setting XDG_GREETER_DATA_DIR=/var/lib/lightdm/data/pi
dbus-update-activation-environment: setting SHELL=/bin/bash
dbus-update-activation-environment: setting GDMSESSION=fluxbox
dbus-update-activation-environment: setting QT_ACCESSIBILITY=1
dbus-update-activation-environment: setting GPG_AGENT_INFO=/run/user/1000/gnupg/S.gpg-agent:0:1
dbus-update-activation-environment: setting LC_ALL=en_US.UTF-8
dbus-update-activation-environment: setting PWD=/home/pi
dbus-update-activation-environment: setting XDG_DATA_DIRS=/home/pi/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share:/usr/local/share:/usr/share
/home/pi/.fluxbox/startup: 23: /home/pi/.fluxbox/startup: xdg-user-dirs-gtk-update: not found
wmalauncher ver. 2020.0124 - (c) 2018-2020, Sébastien Ballet <slacker6896@gmail.com> -

wmalauncher ver. 2020.0124 - (c) 2018-2020, Sébastien Ballet <slacker6896@gmail.com> -

wmalauncher ver. 2020.0124 - (c) 2018-2020, Sébastien Ballet <slacker6896@gmail.com> -

wmalauncher ver. 2020.0124 - (c) 2018-2020, Sébastien Ballet <slacker6896@gmail.com> -

WARNING: Setting geometry in section global doesn't exist
WARNING: Setting notification_height in section global doesn't exist
WARNING: Setting line-height in section global doesn't exist
WARNING: Setting startup_notification in section global doesn't exist
WARNING: Setting verbosity in section global doesn't exist
WARNING: Section shortcuts is deprecated.
Acting on notifications has been moved to its own utility. For more information, see the manual for dunstctl.
Ignoring this section.
No touchscreen is found
WARNING: More than one Desktop window found:
        0x  800021   3            
        0x  800008   3            
Keys: Invalid key/modifier on line 56): Control Mod1 Bksp :Exit
Keys: Invalid key/modifier on line 75): OnDesktop Mouse2 :WorkspaceMenu
Keys: Invalid key/modifier on line 76): OnDesktop Mouse3 :RootMenu
Keys: Invalid key/modifier on line 111): Mod1 F5 :Kill
Keys: Invalid key/modifier on line 180): Mod1 KP_End    :MacroCmd {ResizeTo 50% 50% } {MoveTo 00 00 BottomLeft}
Keys: Invalid key/modifier on line 181): Mod1 KP_Down   :MacroCmd {ResizeTo 100% 50%} {MoveTo 00 00 Bottom}
Keys: Invalid key/modifier on line 182): Mod1 KP_Next   :MacroCmd {ResizeTo 50% 50% } {MoveTo 00 00 BottomRight}
Keys: Invalid key/modifier on line 183): Mod1 KP_Left   :MacroCmd {ResizeTo 50% 100%} {MoveTo 00 00 Left}
Keys: Invalid key/modifier on line 184): Mod1 KP_Right  :MacroCmd {ResizeTo 50% 100%} {MoveTo 00 00 Right}
Keys: Invalid key/modifier on line 185): Mod1 KP_Home   :MacroCmd {ResizeTo 50% 50% } {MoveTo 00 00 TopLeft}
Keys: Invalid key/modifier on line 186): Mod1 KP_Up     :MacroCmd {ResizeTo 100% 50%} {MoveTo 00 00 Up}
Keys: Invalid key/modifier on line 187): Mod1 KP_Prior  :MacroCmd {ResizeTo 50% 50% } {MoveTo 00 00 TopRight}
Keys: Invalid key/modifier on line 189): Mod1 KP_Begin  :MacroCmd {ResizeTo 70% 70% } {MoveTo 00 00 Center}
Keys: Invalid key/modifier on line 191): Mod1 KP_Insert :ToggleCmd {Maximize} {Restore}

(blueman-applet:680): Gdk-CRITICAL **: 18:07:27.217: gdk_window_thaw_toplevel_updates: assertion 'window->update_and_descendants_freeze_count > 0' failed
libpng warning: iCCP: known incorrect sRGB profile
conky: no process found
conky: desktop window (365) is root window
conky: window type - normal
conky: drawing to created window (0x3600001)
conky: drawing to double buffer
WARNING: No icon found in path: 'nm-signal-75'
dbus[1495]: Unable to set up transient service directory: XDG_RUNTIME_DIR "/run/user/1000" is owned by uid 1000, not our uid 0
dbus[1770]: Unable to set up transient service directory: XDG_RUNTIME_DIR "/run/user/1000" is owned by uid 1000, not our uid 0
umount: /dev/sda9: no mount point specified.
umount: /dev/sda8: no mount point specified.
umount: /dev/sda7: no mount point specified.
umount: /dev/sda6: no mount point specified.
umount: /dev/sda5: no mount point specified.
umount: /dev/sda4: no mount point specified.
umount: /dev/sda3: no mount point specified.
umount: /dev/sda2: not mounted.
umount: /dev/sda1: not mounted.
1+0 records in
1+0 records out
512 bytes copied, 0.0908127 s, 5.6 kB/s
mke2fs 1.44.5 (15-Dec-2018)
